--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
 android {
     namespace 'com.sammy.livaapp'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.sammy.livaapp"
@@ -29,6 +29,9 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+    }
+    viewBinding{
+        enable = true
     }
 }
 
